--- a/package.json
+++ b/package.json
@@ -8,9 +8,15 @@
     "@fortawesome/free-regular-svg-icons": "^5.4.2",
     "@fortawesome/free-solid-svg-icons": "^5.4.2",
     "@fortawesome/react-fontawesome": "^0.1.3",
+    "@material-ui/core": "^3.5.1",
+    "ajv": "^6.5.5",
+    "animejs": "^2.2.0",
+    "aos": "^2.3.4",
     "bootstrap": "^4.1.3",
     "i": "^0.3.6",
+    "jquery": "^3.3.1",
     "npm": "^6.4.1",
+    "popper.js": "^1.14.5",
     "react": "^16.6.0",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.6.0",
