--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "react": "^16.6.0",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.6.0",
+    "react-photo-gallery": "^6.3.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.0"
+    "react-scripts": "^2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
