set private to false

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "first-react-attempt",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "homepage": "https://adams583.github.io/tedxcornell",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.7",
