--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "gh-pages": "^2.0.1",
     "i": "^0.3.6",
     "jquery": "^3.3.1",
-    "npm": "^6.4.1",
+    "npm": "^6.9.0",
     "popper.js": "^1.14.5",
     "react": "^16.6.0",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.6.0",
+    "react-helmet": "^5.2.0",
+    "react-meta-tags": "^0.7.4",
     "react-photo-gallery": "^6.3.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.2"
