--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-meta-tags": "^0.7.4",
     "react-photo-gallery": "^6.3.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "^2.1.2"
+    "react-scripts": "^2.1.2",
+    "react-youtube": "^7.9.0"
   },
   "scripts": {
     "start": "react-scripts start",
