--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-photo-gallery": "^6.3.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.2",
-    "react-youtube": "^7.9.0"
+    "react-youtube": "^7.9.0",
+    "zenscroll": "^4.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
