--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-helmet": "^5.2.1",
     "react-meta-tags": "^0.7.4",
     "react-photo-gallery": "^6.3.4",
-    "react-router-dom": "^4.3.1",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "^2.1.8",
     "react-youtube": "^7.13.1"
   },
