--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ orbs:
   # See the orb documentation here: https://circleci.com/developer/orbs/orb/circleci/heroku
   # NOTE: Environment variables containing the necessary secrets can be setup in the CircleCI UI
   # See here https://circleci.com/docs/2.0/env-vars/#setting-an-environment-variable-in-a-project
-  heroku: circleci/heroku@1.2
+  heroku: circleci/heroku@1.2.6
 
 workflows:
   # Below is the definition of your workflow.
@@ -25,6 +25,4 @@ workflows:
             - node/test # only run deploy-via-git job if the build job has completed
           filters:
             branches:
-              # This sample config runs this job on any branch matching the regex below, however, it's more likely you want to only run this job on master.
-              only: /.*-heroku-deploy/ # Delete this line
-              # only: master  # Uncomment this line
+              only: master
