--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@material-ui/core": "^3.9.4",
+    "@types/jest": "^27.0.2",
+    "@types/node": "^16.10.3",
+    "@types/react": "^17.0.27",
+    "@types/react-dom": "^17.0.9",
     "ajv": "^6.12.6",
     "animejs": "^2.2.0",
     "aos": "^2.3.4",
     "bootstrap": "^4.6.0",
     "gh-pages": "^2.2.0",
-    "i": "^0.3.6",
+    "i": "^0.3.7",
     "jquery": "^3.5.1",
     "npm": "^6.14.11",
     "popper.js": "^1.16.1",
@@ -27,7 +31,8 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^2.1.8",
-    "react-youtube": "^7.13.1"
+    "react-youtube": "^7.13.1",
+    "typescript": "^4.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
