--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "animejs": "^2.2.0",
     "aos": "^2.3.4",
     "bootstrap": "^4.6.0",
+    "classnames": "^2.3.1",
     "gh-pages": "^2.2.0",
     "i": "^0.3.6",
     "jquery": "^3.5.1",
