--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^16.14.0",
     "react-bootstrap": "^2.0.2",
     "react-dom": "^16.14.0",
+    "react-ga": "^3.3.0",
     "react-helmet": "^5.2.1",
     "react-meta-tags": "^0.7.4",
     "react-photo-gallery": "^6.3.4",
