--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-helmet": "^5.2.1",
     "react-meta-tags": "^0.7.4",
     "react-photo-gallery": "^6.3.4",
+    "react-reveal": "^1.2.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^2.1.8",
