--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "first-react-attempt",
   "version": "0.1.0",
   "private": false,
+  "engines": {
+    "node": "14.17.x",
+    "npm": "6.14.x"
+  },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-brands-svg-icons": "^5.15.2",
